@@ -1,3 +1,8 @@
+2003-07-16  OHASHI Akira  <bg66@koka-in.org>
+
+	* shimbun/shimbun.el (shimbun-lsdb-get-x-face): Handle multi
+	X-Faces.  Return nil when a full name is not extracted.
+
 2003-07-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* shimbun/shimbun.el (shimbun-use-bbdb-for-x-face): Abolished.
